views/assets/css/components/time_picker_field.css
.v-plugin--time-picker-field {
  position: relative;
}

.time-picker-field__time-list {
  position: absolute;
  max-height: 33vh;
  background: Canvas;
  width: 100%;
  overflow: visible auto;
  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
  z-index: 1;
}

.time-picker-field__time-list ul {
  list-style: none;
  margin-block: 0;
  padding-inline: 0;
}

.time-picker-field__time-list .time-picker-field__time-list__item {
  padding: var(--v-padding1) var(--v-padding2);
  cursor: pointer;
}

.time-picker-field__time-list .time-picker-field__time-list__item:hover,
.time-picker-field__time-list__item--candidate {
  background: rgba(0, 0, 0, 0.1);
}

